Invert null-element tests to assert rejection, drop null-as-data tests
AbstractSetTest.NullElementTests, AbstractSeqTest (now
NullElementRemoveAllTests), AbstractMapTest.NullValueTests/
GetWithNullsTests and the three AbstractTraversableTest templates
about stored nulls now assert NullPointerException instead of
pinning the old Some(null)-adjacent behaviour.
TreeSetTest.shouldReturnStoredNullFromHeadLastAndGet,
IteratorTest.shouldDistinctNullElements/shouldNotEatNullOnDistinct,
HashArrayMappedTrieTest's null-key collision tests, RedBlackTreeTest's
null-insert tests, VectorBuilderTest.shouldAcceptNullElements and the
per-map mapOfNullKey fixtures follow the same pattern: rejection is
asserted, the old null-as-ordinary-data assertions are gone.

AbstractTraversableTest.allowsNull() now returns false for every
collection (it still defaults to true for the control-type tests),
which is what makes shouldConvertToJavaArrayWithTypeHintPrimitiveVoid
exercise the rejection path instead of storing null.
JavaConvertersTest's List/Queue/Stream/Vector-backed java.util.List
views move from NULLABLE to NON_NULLABLE (java.util.Arrays$ArrayList
keeps NULLABLE, it is a plain JDK list untouched by this change).

VectorPropertyTest and VectorBuilderTest drop the null branches from
their random-value and primitive-vector generators; a few
AbstractSeqTest/JavaConvertersTest index-bound tests swap a null
element for a real one so the bounds check is what's being tested.